--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-databind:2.4.1.3'
     compile 'com.jakewharton:butterknife:6.0.0'
     compile 'com.jpardogo.materialtabstrip:library:1.0.4'
+    compile 'com.getbase:floatingactionbutton:1.1.0'
 }
 
 
