--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.traveler" >
+    package="com.traveler">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -8,10 +8,10 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name="com.traveler.activity.LocationSearchActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,8 +34,8 @@
             android:theme="@style/AttractionsTheme" />
         <activity
             android:name="com.traveler.activity.PlaceDetailActivity"
-            android:label="@string/title_activity_place_detail" >
-        </activity>
+            android:theme="@style/ThemeTransparentActionBarOverlay"
+            android:label="@string/title_activity_place_detail" />
     </application>
 
 </manifest>
