--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,13 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
-            android:name="com.traveler.activity.LocationSearchActivity"
+            android:name=".activity.LocationSearchActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,23 +24,26 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.traveler.activity.LocationSummaryActivity"
+            android:name=".activity.LocationSummaryActivity"
             android:label="@string/title_activity_location_preview"
             android:theme="@style/ThemeTransparentActionBarOverlay" />
         <activity
-            android:name="com.traveler.activity.ImagesActivity"
+            android:name=".activity.ImagesActivity"
             android:label="@string/title_activity_images" />
         <activity
-            android:name="com.traveler.activity.DescriptionActivity"
+            android:name=".activity.DescriptionActivity"
             android:label="@string/title_activity_description" />
         <activity
-            android:name="com.traveler.activity.AttractionsActivity"
+            android:name=".activity.AttractionsActivity"
             android:label="@string/title_activity_attractions"
             android:theme="@style/AttractionsTheme" />
         <activity
-            android:name="com.traveler.activity.PlaceDetailActivity"
-            android:theme="@style/ThemeTransparentActionBarOverlay"
-            android:label="@string/title_activity_place_detail" />
+            android:name=".activity.PlaceDetailActivity"
+            android:label="@string/title_activity_place_detail"
+            android:theme="@style/ThemeTransparentActionBarOverlay" />
+        <activity
+            android:name=".activity.StreetViewActivity"
+            android:label="@string/title_activity_street_view"/>
     </application>
 
 </manifest>
