--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.traveler">
+    package="com.traveler" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -8,15 +8,14 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
-
+        android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
         <activity
             android:name=".activity.LocationSearchActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,7 +42,11 @@
             android:theme="@style/ThemeTransparentActionBarOverlay" />
         <activity
             android:name=".activity.StreetViewActivity"
-            android:label="@string/title_activity_street_view"/>
+            android:label="@string/title_activity_street_view" />
+        <activity
+            android:name=".activity.VideosActivity"
+            android:label="@string/title_activity_videos" >
+        </activity>
     </application>
 
 </manifest>
