--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.0.2"
+    buildToolsVersion "21.1.1"
 
     defaultConfig {
         applicationId "com.traveler"
@@ -13,7 +13,7 @@ android {
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support:support-v13:21.0.0'
     compile 'com.android.support:palette-v7:21.0.0'
     compile 'com.android.support:cardview-v7:21.0.0'
+    compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:recyclerview-v7:21.0.0'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
     compile 'com.fasterxml.jackson.core:jackson-core:2.4.1.1'
@@ -38,6 +39,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:6.0.0'
     compile 'com.jpardogo.materialtabstrip:library:1.0.4'
     compile 'com.getbase:floatingactionbutton:1.1.0'
+    compile 'de.greenrobot:eventbus:2.4.0'
 }
 
 
