added maps key debug/release

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBsBWRCsTwJUHyHloJE5kqTJIqYPRQLvZA" />
+            android:value="@string/maps_debug" />
 
         <activity
             android:name=".activity.MainActivity"
@@ -63,8 +63,8 @@
 
     </application>
 
-    <meta-data
-        android:name="com.google.android.gms.analytics.globalConfigResource"
-        android:resource="@xml/app_tracker" />
+    <!--<meta-data-->
+        <!--android:name="com.google.android.gms.analytics.globalConfigResource"-->
+        <!--android:resource="@xml/app_tracker" />-->
 
 </manifest>
