--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,10 +61,10 @@
             android:name="com.explore.activity.MapActivity"
             android:label="@string/title_activity_map" />
 
+        <meta-data
+            android:name="com.google.android.gms.analytics.globalConfigResource"
+            android:resource="@xml/app_tracker" />
     </application>
 
-    <!--<meta-data-->
-        <!--android:name="com.google.android.gms.analytics.globalConfigResource"-->
-        <!--android:resource="@xml/app_tracker" />-->
 
 </manifest>
