--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     defaultConfig {
         applicationId "com.vgrec.explore"
         minSdkVersion 15
-        targetSdkVersion  21
+        targetSdkVersion 21
         versionCode 4
         versionName "1.0"
     }
@@ -25,7 +25,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.gms:play-services:6.1.71'
+    compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.android.support:support-v13:21.0.0'
     compile 'com.android.support:palette-v7:21.0.0'
