--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.getbase:floatingactionbutton:1.1.0'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.afollestad:material-dialogs:0.7.8.1'
+    compile 'joda-time:joda-time:2.3'
 }
 
 
