--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,15 @@
 apply plugin: 'com.android.application'
 
+
+// Read the API keys. API keys should be defined in a properties file called keys.properties
+// located in the project root directory.
+Properties properties = new Properties()
+properties.load(project.rootProject.file('keys.properties').newDataInputStream())
+def placesApiKey = properties.getProperty('places_api_key')
+def youtubeApiKey = properties.getProperty('youtube_api_key')
+def flickrApiKey = properties.getProperty('flickr_api_key')
+
+
 android {
     compileSdkVersion 21
     buildToolsVersion "21.1.1"
@@ -10,6 +20,10 @@ android {
         targetSdkVersion 21
         versionCode 4
         versionName "1.0"
+
+        buildConfigField("String", "PLACES_API_KEY", "\"" + placesApiKey + "\"")
+        buildConfigField("String", "YOUTUBE_API_KEY", "\"" + youtubeApiKey + "\"")
+        buildConfigField("String", "FLICKR_API_KEY", "\"" + flickrApiKey + "\"")
     }
     buildTypes {
         release {
@@ -43,9 +57,6 @@ dependencies {
     compile 'com.afollestad:material-dialogs:0.7.8.1'
     compile 'joda-time:joda-time:2.3'
 }
-
-
-
 
 
 android {
