--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,8 @@ android {
         buildConfigField("String", "PLACES_API_KEY", "\"" + placesApiKey + "\"")
         buildConfigField("String", "YOUTUBE_API_KEY", "\"" + youtubeApiKey + "\"")
         buildConfigField("String", "FLICKR_API_KEY", "\"" + flickrApiKey + "\"")
+
+        javaCompileOptions.annotationProcessorOptions.includeCompileClasspath = true
     }
     buildTypes {
         release {
@@ -36,24 +38,23 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.gms:play-services-maps:8.4.0'
-    compile 'com.android.support:support-v4:21.0.3'
-    compile 'com.android.support:support-v13:21.0.0'
-    compile 'com.android.support:palette-v7:21.0.0'
-    compile 'com.android.support:cardview-v7:21.0.0'
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.android.support:recyclerview-v7:21.0.0'
-    compile 'com.mcxiaoke.volley:library-aar:1.0.0'
-    compile 'com.fasterxml.jackson.core:jackson-core:2.4.1.1'
-    compile 'com.fasterxml.jackson.core:jackson-annotations:2.4.1'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.4.1.3'
-    compile 'com.jakewharton:butterknife:6.0.0'
-    compile 'com.jpardogo.materialtabstrip:library:1.0.4'
-    compile 'com.getbase:floatingactionbutton:1.1.0'
-    compile 'de.greenrobot:eventbus:2.4.0'
-    compile 'com.afollestad:material-dialogs:0.7.8.1'
-    compile 'joda-time:joda-time:2.3'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.android.gms:play-services-maps:8.4.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:support-v13:28.0.0'
+    implementation 'com.android.support:palette-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.mcxiaoke.volley:library-aar:1.0.0'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.4.1.1'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.4.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.4.1.3'
+    implementation 'com.jakewharton:butterknife:6.0.0'
+    implementation 'com.jpardogo.materialtabstrip:library:1.0.4'
+    implementation 'com.getbase:floatingactionbutton:1.1.0'
+    implementation 'de.greenrobot:eventbus:2.4.0'
+    implementation 'joda-time:joda-time:2.3'
 }
 
 
