--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,12 +40,16 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.android.gms:play-services-maps:8.4.0'
+
+    // Support libs
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:support-v13:28.0.0'
     implementation 'com.android.support:palette-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+
     implementation 'com.mcxiaoke.volley:library-aar:1.0.0'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.4.1.1'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.4.1'
