--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 
-
 // Read the API keys. API keys should be defined in a properties file called keys.properties
 // located in the project root directory.
 Properties properties = new Properties()
@@ -55,10 +54,10 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.4.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.4.1.3'
     implementation 'com.jakewharton:butterknife:6.0.0'
-    implementation 'com.jpardogo.materialtabstrip:library:1.0.4'
-    implementation 'com.getbase:floatingactionbutton:1.1.0'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'de.greenrobot:eventbus:2.4.0'
     implementation 'joda-time:joda-time:2.3'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
 
 
